@@ -15,7 +15,7 @@ if (ereg ("functions.inc.php", $_SERVER['PHP_SELF']))
    exit;
 }
 
-$version = "2.1.0";
+$version = "2.1.1";
 
 //
 // check_session
